--- a/string-extensions/pom.xml
+++ b/string-extensions/pom.xml
@@ -15,7 +15,7 @@
     <packaging>jar</packaging>
 
     <properties>
-        <main.class>me.aubsled.workbook.stringextensions.MainKt</main.class>
+        <main.class>me.aubsled.MainKt</main.class>
     </properties>
 
     <build>
